<resources>
    <string name="app_name">Api Authentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="login">LogIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loading">loading...</string>
    <string name="registered_successfully">registered successfully</string>
</resources>